@@ -245,6 +245,9 @@ a transactional leak does occur between requests somehow, a fresh transaction is
 TIP: The `tx()` method is on the `Graph` interface, but it is also available on the `TraversalSource` spawned from a
 `Graph`.  Calls to `TraversalSource.tx()` are proxied through to the underlying `Graph` as a convenience.
 
+TIP: Some graphs may throw an exception that implements `TemporaryException`. In this case, this marker interface is
+designed to inform the client that it may choose to retry the operation at a later time for possible success.
+
 WARNING: TinkerPop provides for basic transaction control, however, like many aspects of TinkerPop, it is up to the
 graph system provider to choose the specific aspects of how their implementation will work and how it fits into the
 TinkerPop stack. Be sure to understand the transaction semantics of the specific graph implementation that is being
